# LunchTimeApp

./: CMakeLists.txt  Database.cpp  Main.qml  README.md  main.cpp
Assets/Shaders/: Radial_Gradient.frag
Source/Cpp/Data/: Data.cpp  Data.h
Source/Cpp/Data/Database/: Database.cpp  Database.h
Source/Cpp/Data/Time/: DateTime.cpp  DateTime.h
Source/Cpp/DataBaseConnection/: DatabaseConnection.cpp  DatabaseConnection.h
Source/Cpp/Style/: Style.cpp  Style.h
Source/Qml/Screens/FoodMenuScreen/: DayTile.qml  FoodMenuScreen.qml
Source/Qml/Screens/LoginScreen/: LoginScreen.qml
Source/Qml/Screens/MainScreen/: MainScreen.qml  NavBar.qml  ScreenBackground.qml
Source/Qml/Screens/ProfileScreen/: ProfileScreen.qml
Source/Qml/Screens/QRscreen/: ScanScreen.qml
Source/Qml/Screens/SurveyScreen/: OptionHighlight.qml  SurveyInfo.qml  SurveyScreen.qml
Source/Qml/StaticComponents/: LoadingScreen.qml  NavBar.qml  StaticScreenContent.qml  TopBar.qml
